--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
 
+    <script type="text/javascript" src="bootstrap.min.js">
+
+    </script>
+
     <!-- Polyfill(s) for older browsers -->
     <script src="node_modules/core-js/client/shim.min.js"></script>
 
